--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
@@ -55,15 +55,23 @@
 }
 
 .inputFWLX {
-     width: 80px; 
+     width: 100px; 
      margin-top: 1px; 
      border: none; 
      height: 30px; 
      text-align: center;
-     width: 100px;
 }
 
 .spanFWLX {
+    border: 1px solid #cccccc;
+    display: inline-block;
+    width: 128px;
+    height: 34px;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+.spanFWLXFocus {
     border: 1px solid #cccccc;
     display: inline-block;
     width: 128px;
@@ -174,4 +182,12 @@
      width: 594px; 
      padding: 6px 12px;
      color: #999999;
+}
+
+/*.SRK:hover {
+    border: 1px solid #b2b2b2 !important;
+}*/
+
+.SRK:focus {
+    border: 1px solid #5bc0de;
 }
