基础信息保存完成

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -66,19 +66,19 @@
                     <span class="spanFWCZ">房屋类型</span>
                 </div>
                 <div class="divRight">
-                    <span id="spanS" class="spanFWLX SRK">
+                    <span id="spanS" class="spanFWLX">
                         <input id="S" column="S" class="inputFWLX" type="text" />
                         <span class="spanFontColor">室</span>
                     </span>
-                    <span id="spanT" class="spanFWLX SRK">
+                    <span id="spanT" class="spanFWLX">
                         <input id="T" column="T" class="inputFWLX" type="text" />
                         <span class="spanFontColor">厅</span>
                     </span>
-                    <span id="spanW" class="spanFWLX SRK">
+                    <span id="spanW" class="spanFWLX">
                         <input id="W" column="W" class="inputFWLX" type="text" />
                         <span class="spanFontColor">卫</span>
                     </span>
-                    <span id="spanPFM" class="spanFWLX SRK" style="width: 198px">
+                    <span id="spanPFM" class="spanFWLX" style="width: 198px">
                         <span class="spanFontColor" style="margin-left: 8px">共</span>
                         <input id="PFM" column="PFM" class="inputFWLX" type="text" />
                         <span class="spanFontColor">平（㎡）</span>
@@ -206,7 +206,7 @@
                     <span id="spanFYBT">房源标题</span>
                 </div>
                 <div class="divRight">
-                    <input column="FYBT" class="spanFWLX SRK" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="请输入房源标题" />
+                    <input column="BT" class="spanFWLX SRK" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="请输入房源标题" />
                 </div>
             </div>
             <div id="divFYMS" class="divFWCZ" style="height: 170px;">
@@ -215,7 +215,7 @@
                     <span id="spanFYMS">房源描述</span>
                 </div>
                 <div class="divRight">
-                    <textarea column="FYMS" class="spanFWLX SRK" style="width: 594px; height: 170px; padding: 6px 12px; color: #999999" placeholder="请输入房源标题"></textarea>
+                    <textarea id="FYMS" class="spanFWLX SRK" style="width: 594px; height: 170px; padding: 6px 12px; color: #999999"></textarea>
                 </div>
             </div>
             <div id="divFWZP" class="divFWCZ">
