--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
@@ -196,7 +196,11 @@ li {
     width: 100px;
 }
 
+/*清除谷歌浏览器下的 search 叉号*/
+/*input::-webkit-search-cancel-button{
+  display: none;
+}*/
 /*清除IE下的 search 叉号*/
-input[type=search]::-ms-clear{
+input[type=text]::-ms-clear{
   display: none;
 }
