日期输入框

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
@@ -188,6 +188,10 @@ li {
     color: #999999;
 }
 
+.spanFontColor:focus {
+    color: #333333;
+}
+
 .inputLCFB {
     margin-top: 1px; 
     border: none; 
