--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
@@ -170,11 +170,21 @@
 }
 
 .inputLXRXX {
-     width: 594px; 
+     width: 350px; 
      padding: 6px 12px;
      color: #999999;
 }
 
 .SRK:focus {
     border: 1px solid #5bc0de;
+    color: #333333 !important;
+}
+
+.ui-state-active {
+    background: #5bc0de !important;
+    border: 1px solid #5bc0de !important;
+}
+
+.ui-datepicker {
+    width: 350px !important;
 }
