--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -9,8 +9,12 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title></title>
+
+    <link href="@Url.Content("~/Areas/Business/Css/FWCZ.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery-ui.min.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FWCZ.js")"></script>
-    <link href="@Url.Content("~/Areas/Business/Css/FWCZ.css" )" rel="stylesheet" />
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery-ui.min.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery.ui.datepicker-zh-CN.js")"></script>
 </head>
 <body style="width: 100%; height: 100%; font-family: 微软雅黑">
     <div style="width: 1440px; text-align: center;">
@@ -57,7 +61,7 @@
                     <span class="spanFWCZ">小区名称</span>
                 </div>
                 <div class="divRight">
-                    <input id="XZMC" column="XQMC" class="spanFWLX SRK" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="请输入小区名称"/>
+                    <input id="XZMC" column="XQMC" class="spanFWLX SRK" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="请输入小区名称" />
                 </div>
             </div>
             <div id="divFWLX" class="divFWCZ">
@@ -67,20 +71,20 @@
                 </div>
                 <div class="divRight">
                     <span id="spanS" class="spanFWLX">
-                        <input id="S" column="S" class="inputFWLX" type="text" />
+                        <input id="S" column="S" class="inputFWLX spanFontColor" type="text" />
                         <span class="spanFontColor">室</span>
                     </span>
                     <span id="spanT" class="spanFWLX">
-                        <input id="T" column="T" class="inputFWLX" type="text" />
+                        <input id="T" column="T" class="inputFWLX spanFontColor" type="text" />
                         <span class="spanFontColor">厅</span>
                     </span>
                     <span id="spanW" class="spanFWLX">
-                        <input id="W" column="W" class="inputFWLX" type="text" />
+                        <input id="W" column="W" class="inputFWLX spanFontColor" type="text" />
                         <span class="spanFontColor">卫</span>
                     </span>
                     <span id="spanPFM" class="spanFWLX" style="width: 198px">
                         <span class="spanFontColor" style="margin-left: 8px">共</span>
-                        <input id="PFM" column="PFM" class="inputFWLX" type="text" />
+                        <input id="PFM" column="PFM" class="inputFWLX spanFontColor" type="text" />
                         <span class="spanFontColor">平（㎡）</span>
                     </span>
                 </div>
@@ -93,7 +97,7 @@
                 <div class="divRight">
                     <div class="spanFWLXOut">
                         <div id="divFWCXText" class="spanFWLXIn SRK">
-                            <span id="spanFWCX" column="CX" class="spanFWQK">南北</span>
+                            <span id="spanFWCX" column="CX" class="spanFWQK spanFontColor">南北</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divFWCX" class="divdropdown">
@@ -101,7 +105,7 @@
                     </div>
                     <div class="spanFWLXOut">
                         <div id="divZXQKText" class="spanFWLXIn SRK">
-                            <span id="spanZXQK" column="ZXQK" class="spanFWQK">简单装修</span>
+                            <span id="spanZXQK" column="ZXQK" class="spanFWQK spanFontColor">简单装修</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divZXQK" class="divdropdown">
@@ -109,7 +113,7 @@
                     </div>
                     <div class="spanFWLXOut">
                         <div id="divZZLXText" class="spanFWLXIn SRK">
-                            <span id="spanZZLX" column="ZZLX" class="spanFWQK">普通住宅</span>
+                            <span id="spanZZLX" column="ZZLX" class="spanFWQK spanFontColor">普通住宅</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divZZLX" class="divdropdown">
@@ -125,12 +129,12 @@
                 <div class="divRight">
                     <span id="spanC" class="spanFWLX SRK">
                         <span class="spanFontColor" style=" margin-left: 8px">第</span>
-                        <input id="C" column="C" class="inputLCFB" type="text" style="width: 70px" />
+                        <input id="C" column="C" class="inputLCFB spanFontColor" type="text" style="width: 70px" />
                         <span class="spanFontColor">层</span>
                     </span>
                     <span id="spanGJC" class="spanFWLX SRK">
                         <span class="spanFontColor" style="margin-left: 8px">共</span>
-                        <input id="GJC" column="GJC" class="inputLCFB" type="text" style="width: 70px" />
+                        <input id="GJC" column="GJC" class="inputLCFB spanFontColor" type="text" style="width: 70px" />
                         <span class="spanFontColor">层</span>
                     </span>
                 </div>
@@ -142,12 +146,12 @@
                 </div>
                 <div class="divRight">
                     <span id="spanZJ" class="spanFWLX SRK" style=" display: inline-block;">
-                        <input id="ZJ" column="ZJ" class="inputLCFB" type="text" style="width: 78px" />
+                        <input id="ZJ" column="ZJ" class="inputLCFB spanFontColor" type="text" style="width: 78px" />
                         <span class="spanFontColor">元/月</span>
                     </span>
                     <div id="divYFFSText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px;">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanYFFS" column="YFFS" class="spanFWQK" style="margin-top: 0">押一付一</span>
+                            <span id="spanYFFS" column="YFFS" class="spanFWQK spanFontColor" style="margin-top: 0">押一付一</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divYFFS" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
@@ -155,7 +159,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divBHFY" class="divFWCZ" style="z-index: 994; height: 80px;">
+            <div id="divBHFY" class="divFWCZ" style="z-index: 994; height: 80px; margin-top: -18px;">
                 <div class="divLeft">
                     <span class="required"></span>
                     <span id="spanBHFY">包含费用</span>
@@ -191,22 +195,13 @@
                 <div id="divCZYQText" class="divRight" style="position: relative">
                 </div>
             </div>
-            <div id="divKRZSJ" class="divFWCZ" style="margin-top: 18px;">
-                <div class="divLeft" style="margin-left: 86px;">
-                    <span class="required"></span>
-                    <span id="spanKRZSJ">可入住时间</span>
-                </div>
-                <div class="divRight">
-                    <input class="spanFWLX SRK" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="请输入可入住时间" />
-                </div>
-            </div>
             <div id="divFYBT" class="divFWCZ" style="margin-top: 22px;">
                 <div class="divLeft">
                     <span class="required">*</span>
                     <span id="spanFYBT">房源标题</span>
                 </div>
                 <div class="divRight">
-                    <input column="BT" class="spanFWLX SRK" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="请输入房源标题" />
+                    <input column="BT" class="spanFWLX SRK" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
                 </div>
             </div>
             <div id="divFYMS" class="divFWCZ" style="height: 170px;">
@@ -263,6 +258,15 @@
                 </div>
                 <div class="divRight">
                     <input column="QQ" class="spanFWLX inputLXRXX SRK" type="text" placeholder="请输入QQ" />
+                </div>
+            </div>
+            <div id="divKRZSJ" class="divFWCZ">
+                <div class="divLeft" style="margin-left: 86px;">
+                    <span class="required"></span>
+                    <span id="spanKRZSJ">可入住时间</span>
+                </div>
+                <div class="divRight">
+                    <input id="KRZSJ" readonly="readonly" column="KRZSJ" class="spanFWLX inputLXRXX SRK" type="text" placeholder="请选择可入住时间" />
                 </div>
             </div>
             <div id="divFB" class="divSplit" style="display: block; text-align: center; margin-top: 40px;">
