--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -55,13 +55,19 @@
                     <img class="iFWCZ" id="imgDJCZ" /><label class="labelFWCZ">&nbsp;&nbsp;单间出租</label>
                 </div>
             </div>
-            <div id="divXQMC" class="divFWCZ">
+            <div id="divXQMC" class="divFWCZ" style="z-index: 1000">
                 <div class="divLeft">
                     <span class="required">*</span>
                     <span class="spanFWCZ">小区名称</span>
                 </div>
                 <div class="divRight">
-                    <input id="XZMC" column="XQMC" class="spanFWLX SRK" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="请输入小区名称" />
+                    <div class="spanFWLXOut">
+                        <div id="divXQMCText" class="spanFWLXIn SRK" style="border: none;">
+                            <input id="XQMC" column="XQMC" class="spanFWLX SRK" style="width: 594px; margin-top: 0px; padding: 4px 12px; color: #999999;" type="text" placeholder="请输入小区名称" />
+                        </div>
+                        <div id="divXQMClist" class="divdropdown" style="width: 594px;display: none">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="divFWLX" class="divFWCZ">
