--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -134,7 +134,7 @@
                 </div>
                 <div class="divRight">
                     <span id="spanC" class="spanFWLX SRK">
-                        <span class="spanFontColor" style=" margin-left 8px">第</span>
+                        <span class="spanFontColor" style=" margin-left:8px">第</span>
                         <input id="C" column="C" class="inputLCFB spanFontColor" type="text" style="width: 70px" />
                         <span class="spanFontColor">层</span>
                     </span>
