--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -242,7 +242,13 @@
                     <span id="spanFWZP" style="width:56px; display:inline-block;"></span>
                 </div>
                 <div class="divRight">
-                    <div id="divImg" style="border:1px solid #999999; width:130px;height:130px; display:inline-block;">
+                    <div id="divImg1" class="divImg">
+                    </div>
+                    <div id="divImg2" class="divImg">
+                    </div>
+                    <div id="divImg3" class="divImg">
+                    </div>
+                    <div id="divImg4" class="divImg">
                     </div>
                 </div>
             </div>
