--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
@@ -7,7 +7,7 @@
     margin-bottom: 10px;
     height: 50px;
     position: relative;
-    display: block; 
+    display: block;
 }
 
 .divLeft {
@@ -47,19 +47,19 @@
 }
 
 .divFWQKArrow {
-    background-image: url(http://localhost/XiaoZhen1Qu/Areas/Business/Css/images/arrow_down.png); 
-    width: 16px; 
-    height: 16px; 
-    display: inline-block; 
+    background-image: url(http://localhost/XiaoZhen1Qu/Areas/Business/Css/images/arrow_down.png);
+    width: 16px;
+    height: 16px;
+    display: inline-block;
     vertical-align: middle;
 }
 
 .inputFWLX {
-     width: 100px; 
-     margin-top: 1px; 
-     border: none; 
-     height: 30px; 
-     text-align: center;
+    width: 100px;
+    margin-top: 1px;
+    border: none;
+    height: 30px;
+    text-align: center;
 }
 
 .spanFWLX {
@@ -169,9 +169,9 @@
 }
 
 .inputLXRXX {
-     width: 350px; 
-     padding: 6px 12px;
-     color: #999999;
+    width: 350px;
+    padding: 6px 12px;
+    color: #999999;
 }
 
 .SRK:focus {
@@ -186,4 +186,13 @@
 
 .ui-datepicker {
     width: 350px !important;
+}
+
+.divImg {
+    border: 1px solid #999999;
+    width: 130px;
+    height: 130px;
+    display: inline-block;
+    margin-right: 21px;
+    border-radius: 4px;
 }
