--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -151,7 +151,7 @@
                     <span class="spanFWCZ">房屋租金</span>
                 </div>
                 <div class="divRight">
-                    <span id="spanZJ" class="spanFWLX SRK" style=" display inline-block;">
+                    <span id="spanZJ" class="spanFWLX SRK" style=" display:inline-block;">
                         <input id="ZJ" column="ZJ" class="inputLCFB spanFontColor" type="text" style="width: 78px" />
                         <span class="spanFontColor">元/月</span>
                     </span>
@@ -226,14 +226,15 @@
                 </div>
                 <div class="divRight">
                     <div id="divUploadOut" style="width: 195px; height: 145px; display: inline-block; border: 1px solid #cccccc; border-radius: 4px;">
-                        <div id="divUpload" style="width: 76px; height: 107px; margin-top: 20px; margin-left: 58.5px; background-image: url(http://localhost/XiaoZhen1Qu/Areas/Business/Css/images/upload_small2.png);">
-                            <input id="inputUpload" unselectable="on" type="file" multiple="multiple" style="margin-top: -20px; margin-left: -58.5px; float: left; width: 195px; height: 145px; opacity: 0; cursor: pointer;" />
+                        <div id="divUpload" class="divUpload">
+                            <form action="" enctype="multipart/form-data" id="myform" method="post">
+                                <input id="inputUpload" unselectable="on" type="file" multiple="multiple" class="file" />
+                            </form>
                         </div>
                     </div>
                     <div style="margin-left: 214px; font-size: 14px; color: #999999;">
                         <span>最多8张，可多选上传，最大10mb。有图可使浏览量增加3倍，并会在推荐位显示。</span>
                     </div>
-
                 </div>
             </div>
             <div id="divFWZPValue" class="divFWCZ" style="display: block; text-align: left; margin-top: 140px;">
@@ -241,15 +242,7 @@
                     <span class="required"></span>
                     <span id="spanFWZP" style="width:56px; display:inline-block;"></span>
                 </div>
-                <div class="divRight">
-                    <div id="divImg1" class="divImg">
-                    </div>
-                    <div id="divImg2" class="divImg">
-                    </div>
-                    <div id="divImg3" class="divImg">
-                    </div>
-                    <div id="divImg4" class="divImg">
-                    </div>
+                <div id="divImgs" class="divRight">
                 </div>
             </div>
             <div id="divLXRXX" class="divSplit" style="display: block; text-align: left; margin-top: 140px;">
