--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -237,12 +237,18 @@
                     </div>
                 </div>
             </div>
-            <div id="divFWZPValue" class="divFWCZ" style="display: block; text-align: left; margin-top: 140px;">
+            <div id="divFWZPValue" class="divFWCZ" style="display: none; text-align: left; margin-top: 140px;">
                 <div class="divLeft" style="height: 170px; vertical-align: top;">
                     <span class="required"></span>
                     <span id="spanFWZP" style="width:56px; display:inline-block;"></span>
                 </div>
-                <div id="divImgs" class="divRight">
+                <div id="divImgs1" class="divRight">
+                </div>
+                <div class="divLeft" style="height: 170px; vertical-align: top;">
+                    <span class="required"></span>
+                    <span id="spanFWZP" style="width:56px; display:inline-block;"></span>
+                </div>
+                <div id="divImgs2" class="divRight">
                 </div>
             </div>
             <div id="divLXRXX" class="divSplit" style="display: block; text-align: left; margin-top: 140px;">
