--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -225,12 +225,10 @@
                     <span id="spanFWZP">房屋照片</span>
                 </div>
                 <div class="divRight">
-                    <div id="divUploadOut" style="width: 195px; height: 145px; display: inline-block; border: 1px solid #cccccc; border-radius: 4px;">
-                        <div id="divUpload" class="divUpload">
-                            <form action="" enctype="multipart/form-data" id="myform" method="post">
-                                <input id="inputUpload" unselectable="on" type="file" multiple="multiple" class="file" />
-                            </form>
-                        </div>
+                    <div id="divUploadOut" class="divUploadOut">
+                        <form action="" enctype="multipart/form-data" id="myform" method="post">
+                            <input id="inputUpload" unselectable="on" type="file" multiple="multiple" class="file"/>
+                        </form>
                     </div>
                     <div style="margin-left: 214px; font-size: 14px; color: #999999;">
                         <span>最多8张，可多选上传，最大10mb。有图可使浏览量增加3倍，并会在推荐位显示。</span>
