--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -212,8 +212,8 @@
             </div>
             <div id="divFYMS" class="divFWCZ" style="height: 170px;">
                 <div class="divLeft" style="height: 170px; vertical-align: top;">
-                    <span class="required">*</span>
-                    <span id="spanFYMS">房源描述</span>
+                    <span class="required" style="vertical-align: top">*</span>
+                    <span id="spanFYMS" style="vertical-align: top">房源描述</span>
                 </div>
                 <div class="divRight">
                     <textarea id="FYMS" class="spanFWLX SRK" style="width: 594px; height: 170px; padding: 6px 12px; color: #999999"></textarea>
@@ -221,8 +221,8 @@
             </div>
             <div id="divFWZP" class="divFWCZ">
                 <div class="divLeft" style="height: 170px; vertical-align: top;">
-                    <span class="required">*</span>
-                    <span id="spanFWZP">房屋照片</span>
+                    <span class="required" style="vertical-align: top">*</span>
+                    <span id="spanFWZP" style="vertical-align: top">房屋照片</span>
                 </div>
                 <div class="divRight">
                     <div id="divUploadOut" class="divUploadOut">
