--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -61,13 +61,14 @@
                     <span class="spanFWCZ">小区名称</span>
                 </div>
                 <div class="divRight">
-                    <div class="spanFWLXOut">
+                    <div class="spanFWLXOut" style="z-index: 1000;position: relative">
                         <div id="divXQMCText" class="spanFWLXIn SRK" style="border: none;">
                             <input id="XQMC" column="XQMC" class="spanFWLX SRK" style="width: 594px; margin-top: 0px; padding: 4px 12px; color: #999999;" type="text" placeholder="请输入小区名称" />
                         </div>
-                        <div id="divXQMClist" class="divdropdown" style="width: 594px;display: none">
+                        <div id="divXQMClist" class="divdropdown" style="width: 594px; display: none">
                         </div>
                     </div>
+                    <div id="divXQMCTip" class="Warn" style="z-index: 999; position: relative"></div>
                 </div>
             </div>
             <div id="divFWLX" class="divFWCZ">
@@ -93,6 +94,7 @@
                         <input id="PFM" column="PFM" class="inputFWLX spanFontColor" type="text" />
                         <span class="spanFontColor">平（㎡）</span>
                     </span>
+                    <div id="divFWLXTip" class="Warn"></div>
                 </div>
             </div>
             <div id="divFWQK" class="divFWCZ" style="z-index: 999">
