验证完成一半

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -260,7 +260,7 @@
                 <span class="spanSplit">联系人信息</span>
                 <em class="emSplit"></em>
             </div>
-            <div id="divLXR" class="divFWCZ">
+            <div id="divLXR" class="divFWCZ" style="z-index: 993">
                 <div class="divLeft" style="margin-left: 114px;">
                     <span class="required">*</span>
                     <span id="spanLXDH">联系人</span>
@@ -270,7 +270,7 @@
                     <div id="divLXRTip"></div>
                 </div>
             </div>
-            <div id="divLXDH" class="divFWCZ">
+            <div id="divLXDH" class="divFWCZ" style="z-index: 993">
                 <div class="divLeft">
                     <span class="required">*</span>
                     <span id="spanLXDH">联系电话</span>
@@ -280,7 +280,7 @@
                     <div id="divLXDHTip"></div>
                 </div>
             </div>
-            <div id="divQQ" class="divFWCZ" style="margin-top: -12px;">
+            <div id="divQQ" class="divFWCZ" style="margin-top: -12px;" style="z-index: 993">
                 <div class="divLeft" style="margin-left: 133px;">
                     <span class="required"></span>
                     <span id="spanQQ">QQ</span>
@@ -289,7 +289,7 @@
                     <input column="QQ" class="spanFWLX inputLXRXX SRK" type="text" placeholder="请输入QQ" />
                 </div>
             </div>
-            <div id="divKRZSJ" class="divFWCZ">
+            <div id="divKRZSJ" class="divFWCZ" style="z-index: 994">
                 <div class="divLeft" style="margin-left: 86px;">
                     <span class="required"></span>
                     <span id="spanKRZSJ">可入住时间</span>
