租房页面表单验证基本完成

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -79,20 +79,20 @@
                 </div>
                 <div class="divRight">
                     <span id="spanS" class="spanFWLX">
-                        <input id="S" column="S" class="inputFWLX spanFontColor" type="text" />
+                        <input id="S" maxlength="2" column="S" class="inputFWLX spanFontColor" type="text" />
                         <span class="spanFontColor">室</span>
                     </span>
                     <span id="spanT" class="spanFWLX">
-                        <input id="T" column="T" class="inputFWLX spanFontColor" type="text" />
+                        <input id="T" maxlength="2" column="T" class="inputFWLX spanFontColor" type="text" />
                         <span class="spanFontColor">厅</span>
                     </span>
                     <span id="spanW" class="spanFWLX">
-                        <input id="W" column="W" class="inputFWLX spanFontColor" type="text" />
+                        <input id="W" maxlength="2" column="W" class="inputFWLX spanFontColor" type="text" />
                         <span class="spanFontColor">卫</span>
                     </span>
                     <span id="spanPFM" class="spanFWLX" style="width: 198px">
                         <span class="spanFontColor" style="margin-left: 8px">共</span>
-                        <input id="PFM" column="PFM" class="inputFWLX spanFontColor" type="text" />
+                        <input id="PFM" maxlength="7" column="PFM" class="inputFWLX spanFontColor" type="text" />
                         <span class="spanFontColor">平（㎡）</span>
                     </span>
                     <div id="divFWLXTip" class="Warn"></div>
@@ -138,12 +138,12 @@
                 <div class="divRight">
                     <span id="spanC" class="spanFWLX SRK">
                         <span class="spanFontColor" style=" margin-left:8px">第</span>
-                        <input id="C" column="C" class="inputLCFB spanFontColor" type="text" style="width: 70px" />
+                        <input id="C" maxlength="2" column="C" class="inputLCFB spanFontColor" type="text" style="width: 70px" />
                         <span class="spanFontColor">层</span>
                     </span>
                     <span id="spanGJC" class="spanFWLX SRK">
                         <span class="spanFontColor" style="margin-left: 8px">共</span>
-                        <input id="GJC" column="GJC" class="inputLCFB spanFontColor" type="text" style="width: 70px" />
+                        <input id="GJC" maxlength="2" column="GJC" class="inputLCFB spanFontColor" type="text" style="width: 70px" />
                         <span class="spanFontColor">层</span>
                     </span>
                     <div id="divLCFBTip" class="Warn"></div>
@@ -156,7 +156,7 @@
                 </div>
                 <div class="divRight">
                     <span id="spanZJ" class="spanFWLX SRK" style=" display:inline-block;">
-                        <input id="ZJ" column="ZJ" class="inputLCFB spanFontColor" type="text" style="width: 78px" />
+                        <input id="ZJ" maxlength="9" column="ZJ" class="inputLCFB spanFontColor" type="text" style="width: 78px" />
                         <span class="spanFontColor">元/月</span>
                     </span>
                     <div id="divYFFSText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative; ">
@@ -212,7 +212,7 @@
                     <span id="spanFYBT">房源标题</span>
                 </div>
                 <div class="divRight">
-                    <input id="BT" column="BT" class="spanFWLX SRK" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
+                    <input id="BT" maxlength="50" column="BT" class="spanFWLX SRK" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
                     <div id="divBTTip"></div>
                 </div>
             </div>
@@ -276,7 +276,7 @@
                     <span id="spanLXDH">联系电话</span>
                 </div>
                 <div class="divRight">
-                    <input id="LXDH" column="LXDH" class="spanFWLX inputLXRXX SRK" type="text" placeholder="请输入联系电话" />
+                    <input id="LXDH" maxlength="11" column="LXDH" class="spanFWLX inputLXRXX SRK" type="text" placeholder="请输入联系电话" />
                     <div id="divLXDHTip"></div>
                 </div>
             </div>
