--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -295,7 +295,7 @@
                     <span id="spanKRZSJ">可入住时间</span>
                 </div>
                 <div class="divRight">
-                    <input id="KRZSJ" readonly="readonly" column="KRZSJ" class="spanFWLX inputLXRXX SRK" type="text" placeholder="请选择可入住时间" />
+                    <input id="KRZSJ" readonly="readonly" class="spanFWLX inputLXRXX SRK" type="text" placeholder="请选择可入住时间" />
                 </div>
             </div>
             <div id="divFB" class="divSplit" style="display: block; text-align: center; margin-top: 40px;">
