--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -247,13 +247,15 @@
                     <span class="required"></span>
                     <span id="spanFWZP" style="width:56px; display:inline-block;"></span>
                 </div>
-                <div id="divImgs1" class="divRight">
+                <div id="divImgs1" class="divRight" style="display: inline-block; width: 670px;">
+                    <ul id="ulImgs1" style="padding-left: 0px;"></ul>
                 </div>
                 <div class="divLeft" style="height: 170px; vertical-align: top;">
                     <span class="required"></span>
                     <span id="spanFWZP" style="width:56px; display:inline-block;"></span>
                 </div>
-                <div id="divImgs2" class="divRight">
+                <div id="divImgs2" class="divRight" style="display: inline-block; width: 670px;">
+                    <ul id="ulImgs2" style="padding-left: 0px;"></ul>
                 </div>
             </div>
             <div id="divLXRXX" class="divSplit" style="display: block; text-align: left; margin-top: 140px;">
