--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
@@ -45,7 +45,7 @@
 }
 
 .divFWQKArrow {
-    background-image: url(../../Css/images/arrow_down.png);
+    background-image: url(../Css/images/arrow_down.png);
     width: 16px;
     height: 16px;
     display: inline-block;
@@ -186,29 +186,43 @@
     width: 400px !important;
 }
 
+.liImg {
+    display: inline-block;
+    width: 150px;
+    height: 146px;
+}
+
 .divImg {
     width: 150px;
     height: 146px;
     display: inline-block;
-    margin-right: 21px;
+    margin-right: 10px;
     margin-top: 20px;
     border-radius: 4px;
     overflow: hidden;
+    cursor: move;
+}
+
+.opacity {
+    width: 100%;
+    height: 20px;
+    background-color: #000;
+    opacity: 0.3;
 }
 
 .file {
-    float: left; 
-    width: 195px; 
-    height: 145px; 
-    opacity: 0; 
+    float: left;
+    width: 195px;
+    height: 145px;
+    opacity: 0;
     cursor: pointer;
 }
 
 .divUploadOut {
-    width: 195px; 
-    height: 145px; 
-    display: inline-block; 
-    border: 1px solid #cccccc; 
+    width: 195px;
+    height: 145px;
+    display: inline-block;
+    border: 1px solid #cccccc;
     background-image: url(../Css/images/upload_small2.png);
 }
 
@@ -225,7 +239,7 @@
     color: #5bc0de;
     margin-left: 220px;
     z-index: 999;
-     position: relative;
+    position: relative;
 }
 
 .imgTip {
