--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
@@ -186,30 +186,6 @@
     width: 400px !important;
 }
 
-.liImg {
-    display: inline-block;
-    width: 150px;
-    height: 146px;
-}
-
-.divImg {
-    width: 150px;
-    height: 146px;
-    display: inline-block;
-    margin-right: 10px;
-    margin-top: 20px;
-    border-radius: 4px;
-    overflow: hidden;
-    cursor: move;
-}
-
-.opacity {
-    width: 100%;
-    height: 20px;
-    background-color: #000;
-    opacity: 0.3;
-}
-
 .file {
     float: left;
     width: 195px;
@@ -248,3 +224,87 @@
     margin-right: 2px;
 }
 
+.liImg {
+    display: inline-block;
+    width: 150px;
+    height: 146px;
+    position: relative;
+    float: left;
+    margin-right: 10px;
+}
+
+.divImg {
+    width: 150px;
+    height: 146px;
+    display: inline-block;
+    margin-right: 10px;
+    margin-top: 20px;
+    border-radius: 4px;
+    overflow: hidden;
+    cursor: move;
+}
+
+.toolbar_wrap {
+    width: 150px;
+    height: 146px;
+    position: absolute;
+    top: 20px;
+    left: 0;
+    cursor: move;
+    display: none;
+}
+
+.toolbar_wrap:hover {
+    display: block;
+    width: 150px;
+    height: 146px;
+    position: absolute;
+    top: 20px;
+    left: 0;
+    cursor: move;
+}
+
+.opacity {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    background-color: #000;
+    opacity: 0.3;
+    z-index: 900;
+}
+
+.toolbar {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    z-index: 901;
+    cursor: default;
+}
+
+.edit {
+    background-image: url(../Css/images/edit.png);
+        width: 20px;
+    height: 20px;
+    position: absolute;
+    text-decoration: none;
+    right: 22px;
+    top: 0;
+    cursor: pointer;
+}
+
+.delete {
+    background-image: url(../Css/images/delete.png);
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    text-decoration: none;
+    right: 0;
+    top: 0;
+    cursor: pointer;
+}
